# md-editor

./: .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES.md  package.json  pnpm-lock.yaml  sample.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  menu.rs
src/lib/: file-ops.ts  menu-handler.ts  settings.svelte.ts  state.svelte.ts  theme.ts  viewer-enhance.ts  viewer.ts
src/lib/components/: ContextMenu.svelte
src/lib/editor/: index.ts  link-click.ts  live-preview.ts  table-autocomplete.ts  table-copy.ts  table-ops.ts  table-widget.ts  transforms.ts
src/routes/: +page.svelte
